Add CSS styles for desktop

--- a/styles.css
+++ b/styles.css
@@ -47,6 +47,7 @@ body {
 }
 
 .advice-dice-container {
+  all: unset;
   background-color: var(--color-text-heading);
   height: 4rem;
   width: 4rem;
@@ -59,4 +60,28 @@ body {
   margin-left: -32px;
   left: 50%;
   transform: translateX(-50%, -50%);
+  cursor: pointer;
+}
+
+.advice-dice-container:hover {
+  box-shadow: 0px 0px 40px 0px #53ffaa;
+}
+
+@media only screen and (min-width: 1440px) {
+  .advice-container {
+    margin: 0 28.125rem;
+    padding: 3rem;
+    padding-bottom: 4.5rem;
+  }
+
+  .advice-heading {
+    font-size: 0.8125rem;
+    letter-spacing: 4.086px;
+  }
+
+  .advice-text {
+    font-size: 1.75rem;
+    letter-spacing: -0.3px;
+    margin: 1.5rem 0 2.5rem 0;
+  }
 }
